--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body style="background-color: #CAAFA4;">
+<body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
@@ -45,30 +45,57 @@
         </div>
     </nav>
 
-    <div class="container mt-5">
-        <div class="row align-items-center">
+    <section id="home" class="d-flex align-items-center p-5" style="background-color: #CAAFA4;">
+        <div class="container mt-5">
+            <div class="row align-items-center">
 
-            <div class="col-12 col-md-6 text-center text-md-start">
-                <h1>Hello I'm Laurence <br> I am BSIT Student</h1>
-                <p>Hello! I am a Bachelor of Science in Information Technology (BSIT) student from the Philippines with
-                    a
-                    passion for technology and innovation. My journey in IT is fueled by my curiosity to explore, learn,
-                    and
-                    solve real-world problems through programming and development.</p>
-                <div class="logos mb-3 d-flex justify-content-center justify-content-md-start gap-4">
-                    <ion-icon name="logo-github" size="large"></ion-icon>
-                    <ion-icon name="logo-linkedin" size="large"></ion-icon>
-                    <ion-icon name="logo-facebook" size="large"></ion-icon>
+                <div class="col-12 col-md-6 text-center text-md-start">
+                    <h1>Hello I'm Laurence <br> I am BSIT Student</h1>
+                    <p>Hello! I am a Bachelor of Science in Information Technology (BSIT) student from the Philippines
+                        with
+                        a
+                        passion for technology and innovation. My journey in IT is fueled by my curiosity to explore,
+                        learn,
+                        and
+                        solve real-world problems through programming and development.</p>
+                    <div class="logos mb-3 d-flex justify-content-center justify-content-md-start gap-4">
+                        <ion-icon name="logo-github" size="large"></ion-icon>
+                        <ion-icon name="logo-linkedin" size="large"></ion-icon>
+                        <ion-icon name="logo-facebook" size="large"></ion-icon>
+                    </div>
+                    <button class="btn btn-primary mb-3">Learn More</button>
                 </div>
-                <button class="btn btn-primary mb-3">Learn More</button>
-            </div>
 
 
-            <div class="col-12 col-md-6 text-center text-md-end">
-                <img src="image/myPic.jpg" id="myPic" alt="My Picture" class="img-fluid">
+                <div class="col-12 col-md-6 text-center text-md-end">
+                    <img src="image/myPic.jpg" id="myPic" alt="My Picture" class="img-fluid">
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+
+
+    <section id="about" class="d-flex align-items-center" style="background-color: #BAB4B3;">
+        <div class="container mt-5">
+            <div class="title">
+                <h1 class="text-center">About Me</h1>
+            </div>
+
+
+            <div class="pics">
+                <div class="row align-items-center">
+                    <div class="col-4 col-md-6 text-center text-md-start">
+                        <img src="image/pic1.jpg" alt="">
+                        <img src="image/pic2.jpg" alt="">
+                        <img src="image/pic3.jpg" alt="">
+
+
+                    </div>
+                </div>
+            </div>
+
+    </section>
+
 
 
 
